Bug 75323 - [TAGGEDPDF] glib: Handle missing structure element types
Summary: [TAGGEDPDF] glib: Handle missing structure element types
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: glib frontend (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: tagged-pdf
  Show dependency treegraph
 
Reported: 2014-02-21 13:13 UTC by Adrian Perez de Castro
Modified: 2014-02-22 08:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch (4.15 KB, text/plain)
2014-02-21 13:13 UTC, Adrian Perez de Castro
Details

Description Adrian Perez de Castro 2014-02-21 13:13:18 UTC
Created attachment 94513 [details]
Patch

Element Art (article); RB, RP, RB (Ruby text inner elements); and
WT, WP (Warichu inner elements) were not being handled. The attached
patch adds the corresponding handling in poppler-glib. Also, the
"default" case in the switch in poppler_structure_element_get_type()
is removed, so the compiler can emit warnings when enum values are
not handled.
Comment 1 Carlos Garcia Campos 2014-02-22 08:24:37 UTC
Pushed, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.