glib: Handle missing structure element types

Element Art (article); RB, RP, RB (Ruby text inner elements); and
WT, WP (Warichu inner elements) were not being handled. This adds
the corresponding handling in poppler-glib. Also, the "default" case
in the switch in poppler_structure_element_get_type() is removed, so
the compiler can emit warnings when enum values are not handled.

https://bugs.freedesktop.org/show_bug.cgi?id=75323